--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@ select{cursor:pointer;background-image:url("data:image/svg+xml,%3Csvg xmlns='htt
 <div class="card-top"><div class="c-icon blue"><svg width="22" height="22" viewBox="0 0 24 24" fill="none"><path d="M12 2a4 4 0 014 4v2h1a3 3 0 013 3v8a3 3 0 01-3 3H7a3 3 0 01-3-3v-8a3 3 0 013-3h1V6a4 4 0 014-4zm0 2a2 2 0 00-2 2v2h4V6a2 2 0 00-2-2z" fill="#3182F6"/></svg></div><div><div class="c-title">API 연결</div><div class="c-desc">Anthropic API Key</div></div></div>
 <div class="api-row"><div class="f"><input type="password" id="apiKey" placeholder="sk-ant-..."/></div><button class="btn btn-blue btn-sm" onclick="saveKey()">저장</button></div>
 <div style="margin-top:8px"><label>모델 선택</label><select id="modelSel" style="font-size:13px">
-<option value="claude-sonnet-4-5-20250514">Sonnet 4.5 (추천)</option>
-<option value="claude-sonnet-4-20250514">Sonnet 4</option>
+<option value="claude-sonnet-4-5-20250929">Sonnet 4.5 (최신, 추천)</option>
+<option value="claude-sonnet-4-20250514">Sonnet 4 (안정)</option>
 <option value="claude-haiku-4-5-20251001">Haiku 4.5 (빠름/저렴)</option>
 </select></div>
 <div class="api-st" id="apiSt"></div>
